# zec_mina_barter

./: .gitignore  CURL.md  PROJECT.md  README.md  SETUP.md  TESTING.md  TEST_ELABORATE_FULL.md  buffer  ensue.md
middleware/: API.md  MIDDLEWARE_ESCROWM_COMMUNICATION.md  README.md  jest.config.js  jest.integration.config.js  jest.integration.config.ts  package-lock.json  package.json  tsconfig.json
middleware/__mocks__/: offchain-state-serialization.js
middleware/__tests__/: setup-integration.ts
middleware/__tests__/fixtures/: addresses.ts  trade-data.ts
middleware/__tests__/integration/: middleware-coordinator.test.ts  middleware-mina.test.ts  middleware-settlement.test.ts
middleware/__tests__/unit/: config.test.ts  escrowd-client.test.ts  logger.test.ts  mina-client.test.ts  oracle-client.test.ts  port-manager.test.ts  settlement-worker.test.ts  supabase-client.test.ts
middleware/__tests__/utils/: mock-factories.ts  test-helpers.ts
middleware/src/: api-server.ts  config.ts  contract-imports.ts  coordinator.ts  escrowd-client.ts  escrowd-manager.ts  index.ts  logger.ts  mina-client.ts  o1js-internal.ts  oracle-client.ts  port-allocator.ts  port-manager.ts  settlement-worker.ts  shared-contracts.ts  supabase-client.ts  types.ts
middleware/src/contracts/: utils.ts
mina/: STRUCTURE.md
mina/escrowm-init/: .gitignore  DEPLOY_ZEKO.md  package-lock.json  package.json
mina/escrowm-init/__tests__/: MinaEscrowPool.slow.test.ts
mina/escrowm-init/deployments/: zeko.txt
mina/escrowm-init/scripts/: generate-keys.ts
mina/escrowm-init/src/: MinaEscrowPool.test.ts  MinaEscrowPool.ts  deploy-local.ts  deploy-zeko.ts  index.ts
mina/escrowm-init/src/scripts/: README.md  run-all.sh
mina/escrowm-init/src/scripts/mina_sell_initialization/: 0_msi_setup.ts  1_msi_deposit.ts  2_msi_verify_deposit.ts  3_msi_lock.ts  4_msi_claim.ts  5_msi_settle.ts  6_msi_verify_final.ts
mina/escrowm-init/src/scripts/shared/: mock-zec.ts  real-zec.ts  state-manager.ts  test-utils.ts
mina/escrowm-init/src/scripts/zec_sell_initialization/: 0_zsi_setup.ts  1_zsi_deposit.ts  2_zsi_verify_deposit.ts  3_zsi_lock.ts  4_zsi_claim.ts  5_zsi_settle.ts  6_zsi_verify_final.ts
mina/escrowm/src/: contract-loader.ts  index.ts  mina-client.ts  settlement-worker.ts
mina/extra/escrowm/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
mina/extra/escrowm/src/: config.ts  contract-loader.ts  logger.ts  settlement-worker.ts
testing_guides/: TEST_FULL.md
zcash/: ZCASH_DOCKER.md  docker-compose.zcashd.yml
zcash/escrowdv2/: Cargo.toml  USAGE_AND_API.md
zcash/escrowdv2/src/: api.rs  config.rs  error.rs  key.rs  lib.rs  lightwallet.rs  logging.rs  main.rs  mina.rs  state.rs  wallet.rs  zcashd.rs
zcash/escrowdv2/tests/: api_tests.rs.bak  integration_tests.rs.bak  lightwallet_tests.rs.bak  state_tests.rs.bak  zcashd_tests.rs
zcash/escrowdv2/tests/common/: fixtures.rs  mocks.rs  mod.rs
zcash/lightwalletd/: docker-compose.yml
zcash/old/: Cargo.toml
zcash/old/scripts/: start-escrowd-dev.sh
zcash/old/src/: api.rs  config.rs  error.rs  key.rs  lib.rs  main.rs  mina.rs  state.rs  wallet.rs  zcashd.rs
zcash/old/tests/: api_integration.rs  error_mapping_tests.rs  key_tests.rs  mina_tests.rs  state_tests.rs  zcashd_tests.rs
zcash/scripts/: test-escrowd-api.sh
