[package]
name = "escrowdv2"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2.5"
rand = "0.8"
rusqlite = "0.37"
http = "1.1"
axum = { version = "0.7", features = ["macros"] }
parking_lot = "0.12"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
ring = "0.17"
zeroize = "1.7"
hex = "0.4"
bitcoin = { version = "0.32", default-features = false, features = ["base64", "secp-recovery"] }
base64 = "0.22"
secrecy = "0.8"
async-trait = "0.1"

# Zcash lightwallet stack (modern versions)
zcash_address = { version = "0.10" }
zcash_keys = { version = "0.12", default-features = false, features = ["orchard", "transparent-inputs"] }
zcash_protocol = "0.7"
zip32 = "0.2"
zcash_primitives = { version = "0.26", default-features = false, features = ["transparent-inputs"] }
zcash_note_encryption = "0.4"
incrementalmerkletree = "0.8"
zip321 = "0.6"
zcash_client_backend = { version = "0.21", default-features = false, features = ["orchard", "transparent-inputs", "lightwalletd-tonic", "sync", "unstable"] }
zcash_client_sqlite = { version = "0.19", default-features = false, features = ["orchard", "transparent-inputs", "unstable"] }
zcash_proofs = { version = "0.26", default-features = false, features = ["multicore", "local-prover"] }
zcash_transparent = "0.6"

# gRPC
tonic = { version = "0.14", default-features = false, features = ["transport"] }
prost = "0.14"
prost-types = "0.14"

anyhow = "1"
tempfile = "3"  # Used by Config::default_test() for integration tests

[dev-dependencies]
mockito = "1.6"
serial_test = "3"
