[package]
name = "escrowd"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
parking_lot = "0.12"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
rand = "0.8"
ring = "0.17"
zeroize = "1.7"
hex = "0.4"
zcash_address = { version = "0.10" }
zcash_keys = { version = "0.12", default-features = false, features = ["orchard", "transparent-inputs"] }
zcash_protocol = "0.7"
zip32 = "0.2"
bitcoin = { version = "0.32", default-features = false, features = ["base64", "secp-recovery"] }
base64 = "0.22"
zcash_client_backend = { version = "0.21", default-features = false, features = ["orchard", "transparent-inputs", "lightwalletd-tonic", "sync"] }
zcash_primitives = { version = "0.26", default-features = false, features = ["transparent-inputs"] }
zcash_note_encryption = "0.4"
incrementalmerkletree = "0.8"
zip321 = "0.6"
tonic = { version = "0.14", default-features = false, features = ["transport"] }
prost = "0.14"
prost-types = "0.14"
zcash_client_sqlite = { version = "0.19", default-features = false, features = ["orchard", "transparent-inputs", "unstable"] }
zcash_proofs = { version = "0.26", default-features = false, features = ["multicore"] }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
tempfile = "3.10"
serial_test = "3.2"
